--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ notifications:
     on_success: always
 script:
 - touch CNAME
-- echo "turingchain.tech" > CNAME
+- echo "www.turingchain.tech" > CNAME
 deploy:
   provider: pages
   skip_cleanup: true
